--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost/order_mgmt
-    username: root
-    password: 1234
+    driver-class-name: org.mariadb.jdbc.Driver
+    url: jdbc:mariadb://localhost:3307/photogram?serverTimezone=Asia/Seoul
+    username: cos
+    password: cos1234
